--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,6 +5,10 @@
 </head>
 <body>
     {% include navigation.html %}
+    <div class="body">
+    <div class="main">
     {{ content }}
+    </div>
+    </div>
 </body>
 </html>
