--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,6 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>{{ page.title }} - Isaboo</title>
-<link rel="stylesheet" href="/assets/css/standard.css">
-<link rel="stylesheet" href="/assets/css/navigation.css">
-<link rel="stylesheet" href="/assets/css/body.css">
+<link rel="stylesheet" href="{{ '/assets/css/standard.css' | relative_url }}">
+<link rel="stylesheet" href="{{ '/assets/css/navigation.css' | relative_url }}">
+<link rel="stylesheet" href="{{ '/assets/css/body.css' | relative_url }}">
