--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
-  <img src="/assets/images/logo.png">
+  <img src="{{ '/assets/images/logo.png' | relative_url }}">
   <div class="links">
     {% for item in site.data.navigation %}
       <a href="{{ item.link }}" {% if page.url == item.link %}class="current"{% endif %}>{{ item.name }}</a>
