--- a/assets/css/body.css
+++ b/assets/css/body.css
@@ -14,3 +14,9 @@
     padding-left: 50px;
     padding-right: 50px;
 }
+@media only screen and (max-width: 768px) {
+    .body {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+}
