--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -11,6 +11,16 @@
     margin: 0px auto;
     width: 100%;
 }
+@media only screen and (max-width: 768px) {
+    .navbar {
+       height: 18px;
+       padding: 5px;
+    }
+    .navbar img {
+       width: 110px;
+       margin-top: -15px;
+    }
+}
 .navbar img {
     width: 200px;
     margin-top:-20px;
