--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -13,8 +13,10 @@
 }
 @media only screen and (max-width: 768px) {
     .navbar {
-       height: 24px;
-       padding: 6px;
+       height: 20px;
+       padding: 5px;
+       padding-left: 0px;
+       
     }
     .navbar img {
        width: 70px;
