--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -9,7 +9,6 @@
     position: sticky;
     top: 0px;
     margin: 0px auto;
-    width: 100%;
 }
 @media only screen and (max-width: 768px) {
     .navbar {
@@ -41,4 +40,7 @@ a {
 }
 a:hover {
     text-decoration: underline;
+}
+.navbar {
+    width: 100%;
 }
