--- a/assets/css/standard.css
+++ b/assets/css/standard.css
@@ -5,6 +5,8 @@ body {
     padding: 0px;
     background-color: rgb(41, 41, 41);
     color: white;
+}
+html, body {
+    max-width: 100%;
     overflow-x: hidden;
-    width: 100%;
 }
