--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     {% include header.html %}
 </head>
+
 <body>
     {% include navigation.html %}
-    <div class="body">
     <div class="main">
-    {{ content }}
-    </div>
+        <div class="news">
+            <i class="fas fa-info-circle"></i>
+            <div class="inner">
+                {{ site.data.news }}
+            </div>
+        </div>
+        <div class="box">
+            {{ content }}
+        </div>
+        <div class="box recents">
+            {% include recent.html %}
+        </div>
     </div>
 </body>
+
 </html>
