--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -16,14 +16,14 @@
 }
 @media only screen and (max-width: 768px) {
     .navbar {
-       height: 25px;
        padding: 5px;
        padding-left: 0px;
        
     }
     .navbar img {
-       width: 180px;
-       margin-top: -15px;
+       width: 160px;
+       margin: 5px;
+       margin-top: -12px;
     }
 }
 .navbar .links {
