--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,28 @@
             {{ content }}
         </div>
         <div class="box recents">
+            <h2>Recents Items</h2>
             {% include recent.html %}
+        </div>
+        <div class="box about" id="right">
+            <h2>About:</h2>
+            Hello I'm Isaac.
+        </div>
+        <div class="box plug">
+            <h2>Find @Isaboo elsewhere:</h2>
+            <div class="plug">
+                <img src="https://assets.stickpng.com/thumbs/580b57fcd9996e24bc43c545.png" class="yt-icon">Youtube
+            </div>
+            <div class="plug">
+                <img src="https://www.sferalabs.cc/wp-content/uploads/github-logo-white.png" class="gh-icon">Github
+            </div>
+        </div><br>
+        <div class="box poll">
+            <h2>Daily poll</h2>
+        </div>
+        <div class="box about" id="bottom">
+            <h2>About:</h2>
+            Hello I'm Isaac.
         </div>
     </div>
 </body>
