--- a/assets/css/body.css
+++ b/assets/css/body.css
@@ -13,17 +13,132 @@
     text-decoration: none;
 }
 .box.recents {
-    height: 330px;
+    float: left;
+    height: 355px;
     margin-top: 20px;
-    width: 52%;
+    width: 586px;
     padding-bottom: 0px;
-    max-width: 712px;
-    min-width: 500px;
+}
+.box.plug {
+    float: left;
+    width: 450px;
+    height: 137px;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+.box.poll {
+    float: left;
+    width: 450px;
+    height: 142px;
+    margin-top: 5px;
+    margin-left: 20px;
+}
+/* clamp (250px,50%,599px) */
+.box.about {
+    float: right;
+    width: 33.1%;
+    margin-top: 20px;
+    margin-left: 20px;
+    height: 335px;
+}
+#right {
+    display: block;
+}
+#bottom {
+    display: none;
+}
+@media only screen and (max-width: 1904px) {
+    .box.about {
+        width: 32%;
+    }
+}
+@media only screen and (max-width: 1890px) {
+    .box.about {
+        width: 30%;
+    }
+}
+@media only screen and (max-width: 1828px) {
+    .box.about {
+        width: 27%;
+    }
+}
+@media only screen and (max-width: 1769px) {
+    .box.about {
+        width: 25%;
+    }
+    .box.plug {
+        margin-left: 40px;
+    }
+    .box.poll {
+        margin-left: 40px;
+    }
+}
+@media only screen and (max-width: 1740px) {
+    .box.about {
+        width: 20%;
+    }
+    .box.plug {
+        width: 475px;
+        margin-left: 57px;
+    }
+    .box.poll {
+        width: 475px;
+        margin-left: 57px;
+    }
+}
+@media only screen and (max-width: 1740px) {
+    .box.about {
+        width: 18%;
+    }
+    .box.plug {
+        width: 475px;
+        margin-left: 57px;
+    }
+    .box.poll {
+        width: 475px;
+        margin-left: 57px;
+    }
+}
+@media only screen and (max-width: 1666px) {
+    .box.about {
+        width: 97%;
+        float: none;
+        margin-left: 0;
+    }
+    .box.plug {
+        height: 340px;
+        width: 22%;
+    }
+    .box.poll {
+        height: 337px;
+        float: right;
+        width: 22%;
+    }
+    #right {
+        display: none;
+    }
+    #bottom {
+        display: inline-block;
+    }
+}
+@media only screen and (max-width: 1484px) {
+    .box.plug {
+        width: 45%;
+    }
+    .box.poll {
+        width: 45%;
+        float: none;
+    }
+}
+
+.box h2 {
+    margin: 0px;
+    font-size: 25px;
 }
 .box .item {
     background-color: rgb(41, 41, 41);
     width: 220px;
-    height: 43.2%;
+    height: 40%;
     margin: 6px;
     float: left;
     border-radius: 5px;
@@ -31,13 +146,15 @@
 .box .item img {
     width: 100%;
     height: 80px;
+    object-fit: cover;
     border-radius: 4px;
 }
 .box .recent img {
     height: auto;
+    
 }
 .box .item.recent {
-    height: 90%;
+    height: 83.5%;
     width: 340px;
 }
 .box .item .name {
@@ -95,5 +212,21 @@
     float: left;
     margin-top: 5px;
     margin-left: 5px;
+}
+
+/* Icons */
+.plug {
+    margin: 10px;
+    font-size: 40px;
+}
+.yt-icon {
+    width: 50px;
+    float: left;
+}
+.gh-icon {
+    width: 70px;
+    float: left;
+    margin-left: -10px;
+    margin-right: -8px;
 }
 
