--- a/assets/css/standard.css
+++ b/assets/css/standard.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Lato', sans-serif;
     margin: 0px;
     padding: 0px;
-    background-color: rgb(41, 41, 41);
+    background-color: #292929;
     color: white;
 }
 html, body {
