--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,5 +4,6 @@
     {% for item in site.data.navigation %}
       <a href="{{ item.link }}" {% if page.url == item.link %}class="current"{% endif %}>{{ item.name }}</a>
     {% endfor %}
-  </div>
+
+  </div>    <div class="menuicon"><i class="fas fa-chevron-circle-down"></i></div>
 </nav>
