--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@
     {% include header.html %}
 </head>
 
-<body>
+<body id="body">
     {% include navigation.html %}
     <div class="main">
         <div class="box welcome">
