--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -6,7 +6,7 @@
     background-color: rgba(62, 62, 238, 0.952);
     padding: 20px;
     height: 27px;
-    position: sticky;
+    position: fixed;
     top: 0px;
     margin: 0px auto;
 }
