--- a/assets/css/body.css
+++ b/assets/css/body.css
@@ -361,6 +361,7 @@
     padding-left: 50px;
     padding-right: 65px;
     text-align: center;
+    margin-top: 50px;
 }
 
 @media only screen and (max-width: 952px) {
