--- a/assets/css/body.css
+++ b/assets/css/body.css
@@ -368,6 +368,7 @@
     .main {
         padding-left: 5px;
         padding-right: 20px;
+        margin-top: 20px;
     }
     #under {
         width: 99%;
