--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -10,7 +10,13 @@
     top: 0px;
     margin: 0px auto;
 }
-#expand {
+.expandhidden {
+    height: 0%;
+    width: 100%
+    padding-top: 0px:
+    display: none;
+}
+.expand {
     position: fixed;
     top: 36px;
     background-color: rgba(62, 62, 238, 0.952);
@@ -18,7 +24,7 @@
     width: 100%;
     padding-top: 50px;
 }
-#expand a {
+.expand a {
     margin: 20px;
     font-size: 40px;
 }
