--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -7,7 +7,7 @@
 
   </div>
   <div class="menuicon" onclick="expand(this);" id="btn"><i id="chevron" class="fas fa-chevron-circle-down"></i></div>
-  <div class="hidden" id="expand">{% for item in site.data.navigation %}
+  <div class="expandhidden" id="expand">{% for item in site.data.navigation %}
     <a href="{{ item.link }}" {% if page.url==item.link %}class="current" {% endif %}>{{ item.name }}</a><br>
   {% endfor %}</div>
 </nav>
