--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -16,6 +16,8 @@
     padding-top: 0px:
     display: none;
     transition: .8s;
+    display: none;
+    top: 36px;
 }
 .expand {
     position: fixed;
