--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -12,7 +12,7 @@
 }
 .expandhidden {
     height: 0%;
-    width: 100%
+    width: 100%;
     padding-top: 0px:
     display: none;
     transition: .8s;
