--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -13,7 +13,7 @@
 .expandhidden {
     height: 0%;
     width: 100%;
-    padding-top: 0px:
+    padding-top: 0px;
     display: none;
     transition: .8s;
     display: none;
