--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -14,9 +14,12 @@
     height: 0%;
     width: 100%;
     padding-top: 0px;
-    display: none;
     transition: .8s;
     top: 36px;
+}
+.expandhidden a {
+    margin: 0px;
+    font-size: 0px;
 }
 .expand {
     position: fixed;
@@ -26,7 +29,6 @@
     width: 100%;
     padding-top: 50px;
     transition: .8s;
-    display: block;
 }
 .expand a {
     margin: 20px;
