stuffs los off rouriggf

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,4 +5,5 @@
 <link rel="stylesheet" href="{{ '/assets/css/standard.css' | relative_url }}">
 <link rel="stylesheet" href="{{ '/assets/css/navigation.css' | relative_url }}">
 <link rel="stylesheet" href="{{ '/assets/css/body.css' | relative_url }}">
+<link rel="stylesheet" href="{{ '/assets/css/footer.css' | relative_url }}">
 <script src="https://kit.fontawesome.com/ab8ae3d4f7.js" crossorigin="anonymous"></script>
