--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,13 +2,13 @@
   <img src="{{ '/assets/images/logo.png' | relative_url }}">
   <div class="links">
     {% for item in site.data.navigation %}
-      <a href="{{ item.link }}" {% if page.url==item.link %}class="current" {% endif %}>{{ item.name }}</a>
+      <a href="{{ item.link | relative_url }}" {% if page.url==item.link %}class="current" {% endif %}>{{ item.name }}</a>
     {% endfor %}
 
   </div>
-  <div class="menuicon" onclick="expand(this);" id="btn"><i id="chevron" class="fas fa-chevron-circle-down"></i></div>
+  <div class="menuicon" onclick="expand(this);" id="btn"><i id="chevron" class="fas fa-chevron-circle-down"></i><span class="sr-only">Menu</span></div>
   <div class="expandhidden" id="expand">{% for item in site.data.navigation %}
-    <a href="{{ item.link }}" {% if page.url==item.link %}class="current" {% endif %}>{{ item.name }}</a><br>
+    <a href="{{ item.link | relative_url }}" {% if page.url==item.link %}class="current" {% endif %}>{{ item.name }}</a><br>
   {% endfor %}</div>
 </nav>
 
