--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     {% include header.html %}
 </head>
+
 <body>
     {% include navigation.html %}
-    {{ content }}
+    <div class="main">
+        <div class="box">
+            <h1>{{ page.title }}</h1>
+            <h3>{{ page.longtitle }}</h3>
+        </div>
+        <div class="content">{{content}}</div>
+        
+    </div>
+    {% include footer.html %}
 </body>
+
 </html>
