--- a/assets/css/body.css
+++ b/assets/css/body.css
@@ -364,7 +364,7 @@
 .main {
     padding-left: 50px;
     padding-right: 65px;
-    text-align: center;
+    text-align: left;
     margin-top: 50px;
     margin-bottom: 0px;
     clear: both;
