--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <nav class="navbar" id="navbar">
-  <img src="{{ '/assets/images/logo.png' | relative_url }}">
+  <a href="{{ '/' | relative_url }}"><img src="{{ '/assets/images/logo.png' | relative_url }}"></a>
   <div class="links">
     {% for item in site.data.navigation %}
       <a href="{{ item.link | relative_url }}" {% if page.url==item.link %}class="current" {% endif %}>{{ item.name }}</a>
