full merge requires

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@
         <div class="box welcome">
             {{ content }}
         </div>
-        <div class="box trailer" id="top"></div>
+        <div class="box trailer" id="top">Coming soon...</div>
         <br clear="all">
         <div class="box recents">
             <h2>Recents Items</h2>
@@ -32,9 +32,10 @@
             </div>
         </div><br>
         <div class="box poll">
-            <h2>Daily poll</h2>
+            <h2>Weekly Poll</h2>
             <h3>Do you like pizza?</h3>
             <a href="https://linkto.run/p/WUDVYXEX">Click here to take part.</a>
+            <hr/>
         </div>
         <div class="box about" id="bottom">
             <h2>About:</h2>
@@ -43,7 +44,7 @@
                 <a href="{{ '/about/' | relative_url }}">More about this website and me</a>
             </div>
         </div>
-        <div class="box trailer" id="under"></div>
+        <div class="box trailer" id="under">Coming soon...</div>
     </div>
     {% include footer.html %}
 </body>
