coming soon alerts for plugs

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,12 +24,12 @@
         </div>
         <div class="box plug">
             <h2>Find @Isaboo elsewhere:</h2>
-            <div class="plug">
+            <a href="javascript:alert('coming soon')" class="plug">
                 <img src="{{ '/assets/images/yt.png' | relative_url }}" class="yt-icon">Youtube
-            </div>
-            <div class="plug">
+            </a>
+            <a href="javascript:alert('coming soon')"  class="plug">
                 <img src="https://www.sferalabs.cc/wp-content/uploads/github-logo-white.png" class="gh-icon">Github
-            </div>
+            </a>
         </div><br>
         <div class="box poll">
             <h2>Weekly Poll</h2>
