--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -10,7 +10,7 @@
     <div class="main">
         <div class="box">
             <h1>{{ page.title }}</h1>
-            <h3>{{ page.description }}</h3>
+            <div class="date">{{page.date}}</div>
         </div>
         <div class="content">{{content}}</div>
         
