--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -8,12 +8,13 @@
 <body>
     {% include navigation.html %}
     <div class="main">
-        <div class="box">
+        <div class="box top">
             <h1>{{ page.title }}</h1>
             <div class="date">{{page.date}}</div>
         </div>
-        <div class="content">{{content}}</div>
-        
+        <div class="content-wrapper">
+            <div class="content">{{content}}</div>
+        </div>
     </div>
     {% include footer.html %}
 </body>
