--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 <body>
     {% include navigation.html %}
     <div class="main">
-        <div class="box">
+        <div class="box top">
             <h1>{{ page.title }}</h1>
             <h3>{{ page.description }}</h3>
         </div>
