--- a/assets/css/standard.css
+++ b/assets/css/standard.css
@@ -5,9 +5,11 @@ body {
     padding: 0px;
     background-color: #292929;
     color: white;
+    position: relative;
 }
 html, body {
     max-width: 100%;
+    height: 100%;
     overflow-x: hidden;
 }
 .hidden {
