--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,5 +7,6 @@
 <link rel="stylesheet" href="{{ '/assets/css/body.css' | relative_url }}">
 <link rel="stylesheet" href="{{ '/assets/css/footer.css' | relative_url }}">
 <script src="https://kit.fontawesome.com/ab8ae3d4f7.js" crossorigin="anonymous"></script>
-<script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101318236);</script>
-<script async src="http://clicky.com/?site_id=101318236&sitekey=13c0a961048bf7a0"></script>
+
+<script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101318237);</script>
+<script async src="//static.getclicky.com/js"></script>
