--- a/assets/css/body.css
+++ b/assets/css/body.css
@@ -257,7 +257,10 @@
     border-radius: 5px;
     position: relative;
 }
-
+.itemlink {
+    color: currentColor;
+    text-decoraction: none;
+}
 .box .item img {
     width: 100%;
     height: 80px;
