--- a/_includes/recent.html
+++ b/_includes/recent.html
@@ -1,4 +1,5 @@
 {% for item in site.data.recents %}
+    <a href="{{ item.url }}" class="itemlink">
     <div {% if item.isNew == "recent" %}class="item recent"{% endif %}
     {% if item.isNew == "old" %}class="item"{% endif %}>
     <img src='{{ item.img }}'><br>
@@ -7,4 +8,5 @@
     {% if item.isNew == "recent" %}<br><br>{% endif %}
     <a href="{{ item.url }}">Take a look > </a>
     </div>
+    </a>
 {% endfor %}
