--- a/_includes/recent.html
+++ b/_includes/recent.html
@@ -1,8 +1,7 @@
 {% for item in site.data.recents %}
-    <div {% if item.isNew == "recent" %}class="item recent"{% endif %}
+    <div onclick="window.location='{{item.url}}'" {% if item.isNew == "recent" %}class="item recent"{% endif %}
     {% if item.isNew == "old" %}class="item"{% endif %}>
-    <a href="{{ item.url }}" class="itemlink">
-    <img src='{{ item.img }}'></a><br>
+    <img src='{{ item.img }}'><br>
     <div class="name">{{ item.name }}</div>
     <div class="about">{{ item.about }}</div>
     {% if item.isNew == "recent" %}<br><br>{% endif %}
