--- a/_includes/games.html
+++ b/_includes/games.html
@@ -1,5 +1,5 @@
 {% for item in site.data.games %}
-    <div {% if item.isNew == "recent" %}class="item recent"{% endif %}
+    <div onclick="window.location='{{item.url}}'" {% if item.isNew == "recent" %}class="item recent item-{{ item.number }}"{% endif %}
     {% if item.isNew == "old" %}class="item"{% endif %}>
     <img src='{{ item.img }}'><br>
     <div class="name">{{ item.name }}</div>
