--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -6,7 +6,7 @@
     <style>
         .top-inner {
             background-color: #242424ab;
-            padding: 10px;
+            padding: 15px;
             padding-top: 2px;
             position: absolute;
             bottom: 0px;
@@ -16,9 +16,11 @@
             border-radius: 7px;
             height: 100px;
         }
+
         .top-inner h1 {
             font-size: 30px;
         }
+
         .top-thumbnail {
             background-image: url('{{ page.image }}');
             background-repeat: no-repeat;
@@ -28,15 +30,21 @@
             height: 200px;
             border-radius: 7px;
         }
+
         @media only screen and (max-width: 781px) {
             .top-thumbnail {
                 background-size: 800px;
             }
         }
+
         @media only screen and (max-width: 509px) {
             .top-inner h1 {
-            font-size: 25px;
-        }
+                font-size: 23px;
+            }
+
+            .top-inner {
+                padding: 9px;
+            }
         }
     </style>
 </head>
@@ -44,13 +52,13 @@
 <body>
     {% include navigation.html %}
     <div class="main">
-        <div class="box top" style="position: relative; height: 200px; padding: 0px; width: 1030px;">
+        <div class="box top" style="position: relative; height: 200px; padding: 0px; width: 1010px; max-width: 101%;">
             <div class="top-thumbnail"></div>
             <div class="top-inner">
                 <h1>{{ page.title }}</h1>
                 <div class="date">{{page.date}}</div>
             </div>
-            
+
 
         </div>
         <div class="content-wrapper">
